feat: update Docker setup, enhance logging, and configure media/static file handling

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ server {
     # Static files location - matching Django's STATIC_URL
     location /assets/ {
         alias /app/assets_served/;
+        autoindex on;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
@@ -17,6 +18,7 @@ server {
     # Media files location
     location /media/ {
         alias /app/media/;
+        autoindex on;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
@@ -28,6 +30,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90;
+    }
+
+    # PhpMyAdmin location
+    location /phpmyadmin/ {
+        proxy_pass http://phpmyadmin:80/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90;
     }
 
     # Error handling
