--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,12 @@ services:
       dockerfile: Dockerfile
     expose:
       - "8000"
+    volumes:
+      - ./assets:/app/assets
+      - ./assets_served:/app/assets_served
+      - ./media:/app/media
+      - static_volume:/app/assets_served
+      - media_volume:/app/media
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       - SPRING_DATASOURCE_USERNAME=${DB_USER}
@@ -30,17 +36,15 @@ services:
       - SMS_API_KEY=${SMS_API_KEY}
       - JWT_SIGNING_KEY=${JWT_SIGNING_KEY}
     depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_started
+      - mariadb
+      - redis
     networks:
       - prago_network
     env_file:
       - .env
 
-  mysql:
-    image: mysql:8.0
+  mariadb:
+    image: focker.ir/mariadb:latest
     expose:
       - "3306"
     environment:
@@ -48,18 +52,32 @@ services:
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_INITDB_SKIP_TZINFO=1
     volumes:
-      - mysql_data:/var/lib/mysql
+      - mariadb_volume:/var/lib/mysql
+    restart: always
+    command: [
+      '--innodb-flush-method=O_DIRECT',
+      '--character-set-server=utf8mb4',
+      '--collation-server=utf8mb4_unicode_ci'
+    ]
     networks:
       - prago_network
     env_file:
       - .env
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u$$MYSQL_USER", "-p$$MYSQL_PASSWORD"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-      start_period: 15s
+
+  phpmyadmin:
+    image: focker.ir/phpmyadmin
+    container_name: phpmyadmin_production
+    networks:
+      - prago_network
+    ports:
+      - "8188:80"
+    environment:
+      PMA_ARBITRARY: 1
+      UPLOAD_LIMIT: 300M
+    links:
+      - mariadb
 
   redis:
     image: redis:6.2
@@ -81,14 +99,18 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/assets_served
+      - media_volume:/app/media
     depends_on:
       - backend
     networks:
       - prago_network
 
 volumes:
-  mysql_data:
+  mariadb_volume:
   redis_data:
+  static_volume:
+  media_volume:
 
 networks:
   prago_network:
