chore: add .dockerignore and update .gitignore to exclude IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ media/
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/runConfigurations/runserver.xml
+
+.vscode/
