feat: create Dockerfile.prod for production environment setup

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,18 +16,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# # Copy project
-# COPY . .
+# Copy project
+COPY . .
 
-# # Make entrypoint executable
-# RUN chmod +x /app/entrypoint.sh
+# Make entrypoint executable
+RUN chmod +x /app/entrypoint.sh
 
-# # Create directories for static and media files
-# RUN mkdir -p /app/assets_served /app/media && \
-    # chmod -R 755 /app/assets_served /app/media
+# Create directories for static and media files
+RUN mkdir -p /app/assets_served /app/media && \
+    chmod -R 755 /app/assets_served /app/media
 
-# Set entrypoint
-# ENTRYPOINT ["/app/entrypoint.sh"]
+
+    RUN python manage.py collectstatic --noinput
 
 # Start Gunicorn
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "core.wsgi:application"]
