--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM docker.arvancloud.ir/python:3.12-alpine
 
 WORKDIR /app
 
@@ -6,12 +6,12 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apk add --no-cache \
+    build-base \
+    mariadb-dev \
+    pkgconfig \
     ffmpeg \
-    build-essential \
-    default-libmysqlclient-dev \
-    pkg-config \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/cache/apk/*
 
 # Install Python dependencies
 COPY requirements.txt .
